@@ -13,7 +13,6 @@
  */
 package io.trino.plugin.bigquery;
 
-import com.google.common.collect.ImmutableMap;
 import io.trino.testing.QueryRunner;
 import org.junit.jupiter.api.Test;
 
@@ -37,10 +36,10 @@ public class TestBigQueryWithDifferentProjectIdConnectorSmokeTest
     {
         this.alternateProjectId = requireNonNull(System.getProperty("testing.alternate-bq-project-id"), "testing.alternate-bq-project-id system property not set");
 
-        QueryRunner queryRunner = BigQueryQueryRunner.createQueryRunner(
-                ImmutableMap.of(),
-                ImmutableMap.of("bigquery.project-id", alternateProjectId),
-                REQUIRED_TPCH_TABLES);
+        QueryRunner queryRunner = BigQueryQueryRunner.builder()
+                .setConnectorProperties(Map.of("bigquery.project-id", alternateProjectId))
+                .setInitialTables(REQUIRED_TPCH_TABLES)
+                .build();
         queryRunner.createCatalog(SERVICE_ACCOUNT_CATALOG, "bigquery", Map.of());
         return queryRunner;
     }
